@@ -43,7 +43,8 @@
 #define OPENVDB_UTIL_PAGED_ARRAY_HAS_BEEN_INCLUDED
 
 #include <openvdb/version.h>
-#include <vector>
+#include <openvdb/Types.h>// SharedPtr
+#include <deque>
 #include <cassert>
 #include <iostream>
 #include <algorithm>// std::swap
@@ -77,10 +78,10 @@ namespace util {
 ///          size of the pages can be controlled with the Log2PageSize
 ///          template parameter (defaults to 1024 elements of type ValueT).
 ///          The TableT template parameter is used to define the data
-///          structure for the page table. The default, std::vector,
-///          offers fast random access in exchange for slower
-///          push_back, whereas std:deque offers faster push_back but
-///          slower random access.
+///          structure for the page table. The default, std::deque,
+///          allows mutiple threads to call operator[] as long as only one 
+///          thread calls push_back (which is not the case for std::vector
+///          so don't use this template type!).
 ///
 /// There are three fundamentally different ways to insert elements to
 /// this container - each with different advanteges and disadvanteges.
@@ -185,7 +186,7 @@ namespace util {
 
 template<typename ValueT,
          size_t Log2PageSize = 10UL,
-         template<typename ...> class TableT = std::vector>
+         template<typename ...> class TableT = std::deque>// must allow mutiple threads to call operator[] as long as only one thread calls push_back
 class PagedArray
 {
 private:
@@ -200,9 +201,10 @@ private:
 
 public:
     using ValueType = ValueT;
+    using Ptr       = SharedPtr<PagedArray>;
 
     /// @brief Default constructor
-    PagedArray() { mSize = 0; }
+    PagedArray() = default;
 
     /// @brief Destructor removed all allocated pages
     ~PagedArray() { this->clear(); }
@@ -210,6 +212,9 @@ public:
     // Disallow copy construction and assignment
     PagedArray(const PagedArray&) = delete;
     PagedArray& operator=(const PagedArray&) = delete;
+
+    /// @brief Return a shared pointer to a new instance of this class
+    static Ptr create() { return Ptr(new PagedArray); }
 
     /// @brief Caches values into a local memory Page to improve
     ///        performance of push_back into a PagedArray.
@@ -234,7 +239,7 @@ public:
     /// @param value value to be added to this PagedArray
     ///
     /// @details Constant time complexity. May allocate a new page.
-    size_t push_back(const ValueType& value)
+    inline size_t push_back(const ValueType& value)
     {
         const size_t index = mSize.fetch_and_increment();
         if (index >= mCapacity) this->grow(index);
@@ -249,7 +254,7 @@ public:
     /// @note For best performance consider using the ValueBuffer!
     ///
     /// @warning Not thread-safe!
-    size_t push_back_unsafe(const ValueType& value)
+    inline size_t push_back_unsafe(const ValueType& value)
     {
         const size_t index = mSize.fetch_and_increment();
         if (index >= mCapacity) {
@@ -272,7 +277,7 @@ public:
     /// @note This random access has constant time complexity.
     ///
     /// @warning It is assumed that the i'th element is already allocated!
-    ValueType& operator[](size_t i)
+    inline ValueType& operator[](size_t i)
     {
         assert(i<mCapacity);
         return (*mPageTable[i>>Log2PageSize])[i];
@@ -285,7 +290,7 @@ public:
     /// @note This random access has constant time complexity.
     ///
     /// @warning It is assumed that the i'th element is already allocated!
-    const ValueType& operator[](size_t i) const
+    inline const ValueType& operator[](size_t i) const
     {
         assert(i<mCapacity);
         return (*mPageTable[i>>Log2PageSize])[i];
@@ -296,7 +301,7 @@ public:
     /// @param v value to be filled in all the existing pages of this PagedArray.
     ///
     /// @note Multi-threaded
-    void fill(const ValueType& v)
+    inline void fill(const ValueType& v)
     {
         auto op = [&](const tbb::blocked_range<size_t>& r){
             for(size_t i=r.begin(); i!=r.end(); ++i) mPageTable[i]->fill(v);
@@ -328,7 +333,7 @@ public:
         }
         return true;
     }
-    void copy(ValueType *p) const { this->copy(p, mSize); }
+    inline void copy(ValueType *p) const { this->copy(p, mSize); }
 
     /// @brief Resize this array to the specified size.
     ///
@@ -344,7 +349,7 @@ public:
     /// (especially for the ValueBuffer) from having to deal with empty pages.
     ///
     /// @warning Not thread-safe!
-    void resize(size_t size)
+    inline void resize(size_t size)
     {
         mSize = size;
         if (size > mCapacity) {
@@ -376,18 +381,18 @@ public:
     }
 
     /// @brief Return the number of elements in this array.
-    size_t size() const { return mSize; }
+    inline size_t size() const { return mSize; }
 
     /// @brief Return the maximum number of elements that this array
     /// can contain without allocating more memory pages.
-    size_t capacity() const { return mCapacity; }
+    inline size_t capacity() const { return mCapacity; }
 
     /// @brief Return the number of additional elements that can be
     /// added to this array without allocating more memory pages.
-    size_t freeCount() const { return mCapacity - mSize; }
+    inline size_t freeCount() const { return mCapacity - mSize; }
 
     /// @brief Return the number of allocated memory pages.
-    size_t pageCount() const { return mPageTable.size(); }
+    inline size_t pageCount() const { return mPageTable.size(); }
 
     /// @brief Return the number of elements per memory page.
     static size_t pageSize() { return Page::Size; }
@@ -396,13 +401,13 @@ public:
     static size_t log2PageSize() { return Log2PageSize; }
 
     /// @brief Return the memory footprint of this array in bytes.
-    size_t memUsage() const
+    inline size_t memUsage() const
     {
         return sizeof(*this) + mPageTable.size() * Page::memUsage();
     }
 
     /// @brief Return true if the container contains no elements.
-    bool isEmpty() const { return mSize == 0; }
+    inline bool isEmpty() const { return mSize == 0; }
 
     /// @brief Return true if the page table is partially full, i.e. the
     ///        last non-empty page contains less than pageSize() elements.
@@ -410,12 +415,12 @@ public:
     /// @details When the page table is partially full calling merge()
     ///          or using a ValueBuffer will rearrange the ordering of
     ///          existing elements.
-    bool isPartiallyFull() const { return (mSize & Page::Mask) > 0; }
+    inline bool isPartiallyFull() const { return (mSize & Page::Mask) > 0; }
 
     /// @brief  Removes all elements from the array and delete all pages.
     ///
     /// @warning Not thread-safe!
-    void clear()
+    inline void clear()
     {
         for (size_t i=0, n=mPageTable.size(); i<n; ++i) delete mPageTable[i];
         PageTableT().swap(mPageTable);
@@ -424,19 +429,19 @@ public:
     }
 
     /// @brief Return a non-const iterator pointing to the first element
-    Iterator begin() { return Iterator(*this, 0); }
+    inline Iterator begin() { return Iterator(*this, 0); }
 
     /// @brief Return a non-const iterator pointing to the
     /// past-the-last element.
     ///
     /// @warning Iterator does not point to a valid element and should not
     /// be dereferenced!
-    Iterator end() { return Iterator(*this, mSize); }
+    inline Iterator end() { return Iterator(*this, mSize); }
 
     //@{
     /// @brief Return a const iterator pointing to the first element
-    ConstIterator cbegin() const { return ConstIterator(*this, 0); }
-    ConstIterator begin() const { return ConstIterator(*this, 0); }
+    inline ConstIterator cbegin() const { return ConstIterator(*this, 0); }
+    inline ConstIterator begin() const { return ConstIterator(*this, 0); }
     //@}
 
     //@{
@@ -445,15 +450,15 @@ public:
     ///
     /// @warning Iterator does not point to a valid element and should not
     /// be dereferenced!
-    ConstIterator cend() const { return ConstIterator(*this, mSize); }
-    ConstIterator end() const { return ConstIterator(*this, mSize); }
+    inline ConstIterator cend() const { return ConstIterator(*this, mSize); }
+    inline ConstIterator end() const { return ConstIterator(*this, mSize); }
     //@}
 
     /// @brief Parallel sort of all the elements in ascending order.
-    void sort() { tbb::parallel_sort(this->begin(), this->end(), std::less<ValueT>() ); }
+    inline void sort() { tbb::parallel_sort(this->begin(), this->end(), std::less<ValueT>() ); }
 
     /// @brief Parallel sort of all the elements in descending order.
-    void invSort() { tbb::parallel_sort(this->begin(), this->end(), std::greater<ValueT>()); }
+    inline void invSort() { tbb::parallel_sort(this->begin(), this->end(), std::greater<ValueT>()); }
 
     //@{
     /// @brief Parallel sort of all the elements based on a custom
@@ -510,8 +515,8 @@ private:
         }
     }
     PageTableT mPageTable;//holds points to allocated pages
-    tbb::atomic<size_t> mSize;// current number of elements in array
-    size_t mCapacity = 0;//capacity of array given the current page count
+    tbb::atomic<size_t> mSize{0};// current number of elements in array
+    size_t mCapacity{0};//capacity of array given the current page count
     tbb::spin_mutex mGrowthMutex;//Mutex-lock required to grow pages
 }; // Public class PagedArray
 
