@@ -17,6 +17,8 @@ Version 6.2.0 - In development
     - Minor performance improvements to moving and filtering VDB points.
 
     Bug fixes:
+    - Fixed a bug in util::PagedArray that could produce a crash due to a race 
+      condution.
     - Fixed a bug in tools::computeScalarPotential() that could produce
       a corrupt result due to invalid memory access.
       [Reported by Edwin Braun]
